SAK-40417 Cleanup maven javadoc plugins (#5860)
SAK-40417 Cleanup maven javadoc plugins

(cherry picked from commit 31c60e99d10ad9c957b0aeb19b76c94a4a7dc983)